Add callback to local site DB when data is loaded.

This will be used by the session restore machinery to wait for information regarding background feature usage.

BUG=915714

Change-Id: I68e09f56484595596ef84fbb486ace8878d4352c
Reviewed-on: https://chromium-review.googlesource.com/c/1380803
Commit-Queue: Chris Hamilton <chrisha@chromium.org>
Reviewed-by: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617835}
Former-commit-id: ec8f8e9de867c3eec0a27b16af92255ac82643c6